# notebooklm-skill

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-TW.md  SECURITY.md  SKILL.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  publish.yml  release.yml
docs/: SETUP.md  SETUP.zh-TW.md
examples/research-to-article/: README.md
examples/research-to-threads/: README.md
examples/trend-to-content/: README.md
mcp-server/: __init__.py  server.py  tools.py
mcp_server/: server.py  tools.py
references/: api_surface.md  output_formats.md  pipeline_recipes.md
scripts/: auth_helper.py  notebooklm_client.py  pipeline.py
tests/: test_client.py  test_pipeline.py
